Atualizar o 07.unordered-list.html

--- a/02.Elementos heading, parágrafos, caracteres especiais e listas/07.unordered-list.html
+++ b/02.Elementos heading, parágrafos, caracteres especiais e listas/07.unordered-list.html
@@ -17,6 +17,7 @@
         <li>Café</li>
         <li>Chá</li>
         <li>Leite</li>
+        <li>Suco de Manga</li>
     </ul>
 
     <p>Cidades de São Paulo:</p>
