--- a/06.Elemento-form/02.form.html
+++ b/06.Elemento-form/02.form.html
@@ -37,7 +37,7 @@
         </form>
     </article>
     <footer>
-        <small>Copyright<sup>&copy;</sup> -  Carlos Teixeira.</small>
+        <small>Copyright<sup>&copy;</sup> - Todos os direitos reservados</small>
     </footer>
 </body>
 
