--- a/06.Elemento-form/03.form.html
+++ b/06.Elemento-form/03.form.html
@@ -55,7 +55,7 @@
         </form>
     </article>
     <footer>
-        <small>Copyright<sup>&copy;</sup> - Carlos Teixeira.</small>
+        <small>Copyright<sup>&copy;</sup> - Todos os direitos reservados</small>
     </footer>
 </body>
 
