--- a/06.Elemento-form/05.form.html
+++ b/06.Elemento-form/05.form.html
@@ -59,8 +59,8 @@
             <input type="submit" value="Enviar" />
         </form>
     </article>
-    <footer>
-        <small>Copyright<sup>&copy;</sup> - Carlos Teixeira.</small>
+     <footer>
+        <small>Copyright<sup>&copy;</sup> - Todos os direitos reservados</small>
     </footer>
 </body>
 
