--- a/06.Elemento-form/07.form.html
+++ b/06.Elemento-form/07.form.html
@@ -86,7 +86,7 @@
         </form>
     </article>
     <footer>
-        <small>Copyright<sup>&copy;</sup> - Carlos Teixeira.</small>
+        <small>Copyright<sup>&copy;</sup> - Todos os direitos reservados</small>
     </footer>
 
 </body>
