--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -58,7 +58,7 @@
         <li> 50 Cent - Window Shopper</li>
         <li> 50 Cent - Still Will (Official Music Video) ft. Akon </li>
         <li> Kansas - Carry On WayWard Son</li>
-        
+        <li> Charlie Brown Jr. - Dias de Luta, Dias de Glória</li>
           
     </ol>
 
