--- a/03.Elementos-estruturais-e-textuais/04.filmes.html
+++ b/03.Elementos-estruturais-e-textuais/04.filmes.html
@@ -28,6 +28,7 @@
         <li>Atividade Paranormal: Marcados pelo Mal</li>
         <li>Alerta Vermelho</li>
         <li>Gente Grande</li>
+        <li>Up: Altas Aventuras</li>
     </ol>
 
    
