--- a/03.Elementos-estruturais-e-textuais/04.filmes.html
+++ b/03.Elementos-estruturais-e-textuais/04.filmes.html
@@ -30,6 +30,12 @@
         <li>Gente Grande</li>
         <li>Up: Altas Aventuras</li>
         <li>Vingadores: Ultimato</li>
+        <li>A era do Gelo</li>
+        <li>A era do gelo 2: O Degelo</li>
+        <li>A era do gelo 3 </li>
+        <li>A era do Gelo 4</li>
+        <li>A era do Gelo: O Big Bang</li>
+        <li>A era do Gelo: As aventuras de Buck</li>
     </ol>
 
    
