--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -60,6 +60,7 @@
         <li> Kansas - Carry On WayWard Son</li>
         <li> Charlie Brown Jr. - Dias de Luta, Dias de Glória</li>
         <li> Mc Livinho - Pocotó </li>
+        <li> Chris Brown - Wall to Wall</li>
     </ol>
 
     
