--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -61,6 +61,7 @@
         <li> Charlie Brown Jr. - Dias de Luta, Dias de Glória</li>
         <li> Mc Livinho - Pocotó </li>
         <li> Chris Brown - Wall to Wall</li>
+        <li> Vulgo FK,Kayblack e Mc Cebezinho - Meca Cereja</li>
     </ol>
 
     
