--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -62,6 +62,7 @@
         <li> Mc Livinho - Pocotó </li>
         <li> Chris Brown - Wall to Wall</li>
         <li> Vulgo FK,Kayblack e Mc Cebezinho - Meca Cereja</li>
+        <li> Mc Hariel, Mc Kevin, Mc Ryan SP - Manto do Timão (GR6 Explode) LT no Beat e Dj Murillo</li>
     </ol>
 
     
