--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -63,6 +63,12 @@
         <li> Chris Brown - Wall to Wall</li>
         <li> Vulgo FK,Kayblack e Mc Cebezinho - Meca Cereja</li>
         <li> Mc Hariel, Mc Kevin, Mc Ryan SP - Manto do Timão (GR6 Explode) LT no Beat e Dj Murillo</li>
+        <li> Michael Jackson - Rock With You</li>
+        <li> Michael Jackson - Billie Jean</li>
+        <li> Michael Jackson - Smooth Criminal</li>
+        <li> Michael Jackson - Don't Stop 'Til You Get Enough</li>
+        <li> Michael Jackson - </li>
+        <li> Black and Yellow (feat. Juicy J, Snoop Dogg & T-Pain)</li>
     </ol>
 
     
