--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -69,6 +69,9 @@
         <li> Michael Jackson - Don't Stop 'Til You Get Enough</li>
         <li> Michael Jackson - </li>
         <li> Black and Yellow (feat. Juicy J, Snoop Dogg & T-Pain)</li>
+        <li> Tauz - Vegeta ll</li>
+        <li> Tauz - Vegeta</li>
+        <li> Tauz - Kenshi</li>
     </ol>
 
     
