--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -72,6 +72,7 @@
         <li> Tauz - Vegeta ll</li>
         <li> Tauz - Vegeta</li>
         <li> Tauz - Kenshi</li>
+        <li> Zé Neto e Cristiano - Notificação Preferida</li>
     </ol>
 
     
