--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -73,6 +73,7 @@
         <li> Tauz - Vegeta</li>
         <li> Tauz - Kenshi</li>
         <li> Zé Neto e Cristiano - Notificação Preferida</li>
+        <li> Wesley Safadão e Alazin Coreano - Pega o Guanabara</li>
     </ol>
 
     
