--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -73,7 +73,35 @@
         <li> Tauz - Vegeta</li>
         <li> Tauz - Kenshi</li>
         <li> Zé Neto e Cristiano - Notificação Preferida</li>
+        <li> Zé Neto e Cristiano - BANDA COVER - DVD Por mais beijos ao vivo</li>
+        <li> Zé Neto e Cristiano - BARZINHO ALEATÓRIO - DVD Por Mais Beijos Ao Vivo</li>
         <li> Wesley Safadão e Alazin Coreano - Pega o Guanabara</li>
+        <li> Zé Neto e Cristiano - BATERIA ACABOU part. Marília Mendonça - DVD Um Novo Sonho</li>
+        <li> Zé Neto e Cristiano - Oi Balde</li>
+        <li> Zé Neto e Cristiano - NOVELA DAS NOVE </li>
+        <li> Zé Neto e Cristiano - Me Bloqueia</li>
+        <li> Zé Neto e Cristiano - NOTIFICAÇÃO PREFERIDA</li>
+        <li> Zé Neto e Cristiano - LARGADO ÀS TRAÇAS</li>
+        <li> Zé Neto e Cristiano - CADEIRA DE AÇO - DVD Um Novo Sonho</li>
+        <li> Zé Neto e Cristiano - BATERIA ACABOU part. Marília Mendonça - DVD Um Novo Sonho</li>
+        <li> Zé Neto e Cristiano - STATUS QUE EU NÃO QUERIA</li>
+        <li> Zé Neto e Cristiano - BEBIDA NA FERIDA</li>
+        <li> Matheus & Kauan - Quarta Cadeira (Ao Vivo Em Goiânia / 2018) ft. Jorge & Mateus</li>
+        <li> Dilsinho - Péssimo Negócio (DVD Terra do Nunca Ao Vivo)</li>
+        <li> Zé Neto e Cristiano - MULHER MARAVILHA</li>
+        <li> Zé Neto e Cristiano - Seu Polícia (DVD Zé Neto e Cristiano Ao vivo em São José do Rio Preto)</li>
+        <li> Zé Neto e Cristiano - VOCÊ BEBERIA OU NÃO BEBERIA? - DVD Chaaama</li>
+        <li> Zé Neto e Cristiano - FERIDA CURADA</li>
+        <li> Matheus & Kauan - Vou Ter Que Superar (Ao Vivo) ft. Marília Mendonça</li>
+        <li> Zé Neto e Cristiano - ELA E ELA - DVD Chaaama</li>
+        <li> Henrique e Juliano - Cuida Bem Dela (DVD Ao vivo em Brasília) [Vídeo Oficial]</li>
+        <li> PROTEÇÃO DE TELA - Tarcísio do Acordeon (DVD Meu Sonho)</li>
+        <li> Henrique e Juliano - NA HORA DA RAIVA - DVD Novas Histórias - Ao vivo em Recife</li>
+        <li> Zé Neto e Cristiano - AMIGO TAXISTA - DVD Um Novo Sonho</li>
+        <li> Henrique e Juliano - Flor E O Beija-Flor part. Marília Mendonça - DVD Novas Histórias</li>
+        <li> Henrique e Juliano - A MAIOR SAUDADE - DVD Manifesto Musical</li>
+        <li> Zé Neto e Cristiano - BARZINHO ALEATÓRIO - DVD Por Mais Beijos Ao Vivo</li>
+        <li> Cristiano Araújo - Caso Indefinido (In The Cities DVD) [Brazilian Music]</li>
     </ol>
 
     
