--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -102,6 +102,24 @@
         <li> Henrique e Juliano - A MAIOR SAUDADE - DVD Manifesto Musical</li>
         <li> Zé Neto e Cristiano - BARZINHO ALEATÓRIO - DVD Por Mais Beijos Ao Vivo</li>
         <li> Cristiano Araújo - Caso Indefinido (In The Cities DVD) [Brazilian Music]</li>
+        <li> Henrique e Juliano - AQUELA PESSOA - DVD O Céu Explica Tudo</li>
+        <li> Zé Neto e Cristiano - DERRETER A ALIANÇA </li>
+        <li> Henrique e Juliano - BRIGA FEIA - DVD Ao Vivo No Ibirapuera</li>
+        <li> Zé Neto e Cristiano - WHISKY E GELO - EP Acústico De Novo</li>
+        <li> Zé Neto e Cristiano - Eu Ligo Pra Você (DVD Ao vivo em São José do Rio Preto)</li>
+        <li> Henrique e Juliano - VIDINHA DE BALADA - DVD O Céu Explica Tudo</li>
+        <li> Zé Neto e Cristiano - ESTADO DECADENTE - EP Acústico De Novo</li>
+        <li> Maiara & Maraisa - Medo Bobo (Ao Vivo em Goiânia)</li>
+        <li> Henrique e Juliano - Mudando de Assunto (DVD Ao vivo em Brasília) [Vídeo Oficial]</li>
+        <li> Henrique e Juliano - LIBERDADE PROVISÓRIA - DVD Ao Vivo No Ibirapuera</li>
+        <li> Zé Neto e Cristiano - SONHA COMIGO - DVD Um Novo Sonho</li>
+        <li> Jorge & Mateus - Louca de Saudade - (Como Sempre Feito Nunca) [Vídeo Oficial]</li>
+        <li> Wesley Safadão - Ar Condicionado no 15 [DVD WS In Miami Beach]</li>
+        <li> Jorge & Mateus - CHEIROSA (Vídeo Oficial)</li>
+        <li> Jorge & Mateus - Sosseguei (Como Sempre Feito Nunca) [Vídeo Oficial]</li>
+        <li> Zé Neto e Cristiano - Abaixa o Som - Part Marília Mendonça (DVD Ao vivo em São José do Rio Preto)</li>
+        <li> Matheus & Kauan - Decide Aí - Na Praia Ao Vivo</li>
+        <li> Matheus & Kauan - Te Assumi Pro Brasil – Na Praia 2 / Ao Vivo</li>
     </ol>
 
     
