--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -120,6 +120,15 @@
         <li> Zé Neto e Cristiano - Abaixa o Som - Part Marília Mendonça (DVD Ao vivo em São José do Rio Preto)</li>
         <li> Matheus & Kauan - Decide Aí - Na Praia Ao Vivo</li>
         <li> Matheus & Kauan - Te Assumi Pro Brasil – Na Praia 2 / Ao Vivo</li>
+        <li> Henrique e Juliano - ATÉ A PRÓXIMA VIDA - DVD Manifesto Musical</li>
+        <li> Henrique e Juliano - ARRANHÃO - DVD Manifesto Musical</li>
+        <li> Henrique e Juliano - Ele Quer Ser Eu - DVD Novas Histórias - Ao vivo em Recife</li>
+        <li> Jorge & Mateus - Propaganda [Terra Sem CEP] (Vídeo Oficial)</li>
+        <li> Zé Neto e Cristiano - BEBI MINHA BICICLETA - DVD Por Mais Beijos Ao Vivo</li>
+        <li> Wesley Safadão part. Zé Neto & Cristiano - Na Cama Que Eu Paguei [Garota VIP Rio de Janeiro]</li>
+        <li> Henrique e Juliano - QUEM PEGOU, PEGOU - DVD Menos é Mais - IG: henriqueejuliano</li>
+        <li> Xand Avião - Vai Doer (DVD: Errejota) [Clipe Oficial]</li>
+        <li> </li>
     </ol>
 
     
