--- a/03.Elementos-estruturais-e-textuais/05.musicas.html
+++ b/03.Elementos-estruturais-e-textuais/05.musicas.html
@@ -128,7 +128,7 @@
         <li> Wesley Safadão part. Zé Neto & Cristiano - Na Cama Que Eu Paguei [Garota VIP Rio de Janeiro]</li>
         <li> Henrique e Juliano - QUEM PEGOU, PEGOU - DVD Menos é Mais - IG: henriqueejuliano</li>
         <li> Xand Avião - Vai Doer (DVD: Errejota) [Clipe Oficial]</li>
-        <li> </li>
+        <li> Xand Avião e Os Barões da Pisadinha - Ela Aperta A Minha Mente (Clipe Oficial)</li>
     </ol>
 
     
